[gd_scene load_steps=17 format=2]

[ext_resource path="res://_resources/card_design/texture_yellow.png" type="Texture2D" id=1]
[ext_resource path="res://_resources/card_design/frame_monster.png" type="Texture2D" id=2]
[ext_resource path="res://_resources/card_design/star_level.png" type="Texture2D" id=3]
[ext_resource path="res://_resources/_attributes/divine.png" type="Texture2D" id=4]
[ext_resource path="res://_resources/_card_artwork/00000.png" type="Texture2D" id=5]
[ext_resource path="res://_resources/card_design/texture_back.png" type="Texture2D" id=6]
[ext_resource path="res://_scripts/0175card.gd" type="Script" id=7]
[ext_resource path="res://_resources/fonts/Yu-Gi-Oh! Matrix Regular Small Caps 2.ttf" type="FontFile" id=8]
[ext_resource path="res://_resources/fonts/kaiu.ttf" type="FontFile" id=9]
[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="FontFile" id=10]
[ext_resource path="res://_resources/scene_deck_building/new_bg.png" type="Texture2D" id=11]
[ext_resource path="res://_resources/scene_deck_building/new_en.png" type="Texture2D" id=12]

[sub_resource type="FontFile" id=1]
size = 44
outline_size = 1
outline_color = Color( 0, 0, 0, 0.0980392 )
use_mipmaps = true
use_filter = true
extra_spacing_char = -1
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=2]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 0.152941 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="FontFile" id=3]
size = 28
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=4]
size = 24
outline_size = 2
font_data = ExtResource( 10 )

[node name="0175card" type="Button"]
offset_left = -29.0
offset_top = -42.0
offset_right = 29.0
offset_bottom = 42.0
custom_minimum_size = Vector2( 58, 84 )
pivot_offset = Vector2( 29, 42 )
focus_mode = 0
focus_mode = 0
flat = true
script = ExtResource( 7 )

[node name="z_indexer" type="Node2D" parent="."]
position = Vector2( 0, -1 )
z_as_relative = false

[node name="card_design" type="Control" parent="z_indexer"]
offset_left = -135.875
offset_top = -198.175
offset_right = 195.125
offset_bottom = 283.825
scale = Vector2( 0.175, 0.175 )
pivot_offset = Vector2( 165, 241 )
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="background_texture" type="Sprite2D" parent="z_indexer/card_design"]
position = Vector2( 165, 240 )
texture = ExtResource( 1 )

[node name="artwork" type="Sprite2D" parent="z_indexer/card_design"]
position = Vector2( 164, 240 )
scale = Vector2( 1.02, 1.02 )
texture = ExtResource( 5 )

[node name="card_frame" type="Sprite2D" parent="z_indexer/card_design"]
position = Vector2( 165, 240 )
scale = Vector2( 1.01, 1.01 )
texture = ExtResource( 2 )

[node name="card_name" type="Label" parent="z_indexer/card_design"]
offset_left = 33.0
offset_top = 23.0
offset_right = 474.0
offset_bottom = 68.0
scale = Vector2( 1, 1.05 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 1 )
text = "Shiny Black \"C\""

[node name="attribute" type="Sprite2D" parent="z_indexer/card_design"]
position = Vector2( 280, 43 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 4 )

[node name="monster_features" type="Node2D" parent="z_indexer/card_design"]
position = Vector2( 165, 240 )

[node name="level" type="Node2D" parent="z_indexer/card_design/monster_features"]

[node name="upto11" type="Node2D" parent="z_indexer/card_design/monster_features/level"]
visible = false

[node name="level1" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( 125, -156 )
texture = ExtResource( 3 )

[node name="level2" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( 100, -156 )
texture = ExtResource( 3 )

[node name="level3" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( 75, -156 )
texture = ExtResource( 3 )

[node name="level4" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( 50, -156 )
texture = ExtResource( 3 )

[node name="level5" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( 25, -156 )
texture = ExtResource( 3 )

[node name="level6" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( 0, -156 )
texture = ExtResource( 3 )

[node name="level7" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( -25, -156 )
texture = ExtResource( 3 )

[node name="level8" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( -50, -156 )
texture = ExtResource( 3 )

[node name="level9" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( -75, -156 )
texture = ExtResource( 3 )

[node name="level10" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( -100, -156 )
texture = ExtResource( 3 )

[node name="level11" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/upto11"]
position = Vector2( -125, -156 )
texture = ExtResource( 3 )

[node name="level12" type="Node2D" parent="z_indexer/card_design/monster_features/level"]
position = Vector2( 2, 0 )

[node name="level1" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( 125, -156 )
texture = ExtResource( 3 )

[node name="level2" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( 102, -156 )
texture = ExtResource( 3 )

[node name="level3" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( 79, -156 )
texture = ExtResource( 3 )

[node name="level4" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( 56, -156 )
texture = ExtResource( 3 )

[node name="level5" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( 33, -156 )
texture = ExtResource( 3 )

[node name="level6" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( 10, -156 )
texture = ExtResource( 3 )

[node name="level7" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( -13, -156 )
texture = ExtResource( 3 )

[node name="level8" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( -36, -156 )
texture = ExtResource( 3 )

[node name="level9" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( -59, -156 )
texture = ExtResource( 3 )

[node name="level10" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( -82, -156 )
texture = ExtResource( 3 )

[node name="level11" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( -105, -156 )
texture = ExtResource( 3 )

[node name="level12" type="Sprite2D" parent="z_indexer/card_design/monster_features/level/level12"]
position = Vector2( -128, -156 )
texture = ExtResource( 3 )

[node name="atk_def" type="Node2D" parent="z_indexer/card_design/monster_features"]
position = Vector2( 0, 2 )

[node name="atk" type="Label" parent="z_indexer/card_design/monster_features/atk_def"]
offset_left = 74.0
offset_top = 157.0
offset_right = 131.0
offset_bottom = 184.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource( 2 )
text = "2000"
align = 2

[node name="def" type="Label" parent="z_indexer/card_design/monster_features/atk_def"]
offset_left = 74.0
offset_top = 184.0
offset_right = 131.0
offset_bottom = 211.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="spelltrap_features" type="Node2D" parent="z_indexer/card_design"]
visible = false

[node name="type_of_spelltrap" type="Label" parent="z_indexer/card_design/spelltrap_features"]
offset_left = 29.0
offset_top = 68.0
offset_right = 301.0
offset_bottom = 104.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource( 3 )
text = "Normal Spell Card"
align = 2
valign = 1

[node name="card_back" type="Sprite2D" parent="z_indexer/card_design"]
visible = false
position = Vector2( 164.75, 239.5 )
scale = Vector2( 1.01064, 1.01042 )
texture = ExtResource( 6 )

[node name="trunk_counter" type="Label" parent="z_indexer"]
visible = false
offset_left = -1.0
offset_top = 54.0
offset_right = 56.0
offset_bottom = 80.0
pivot_offset = Vector2( 57, 26 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 4 )
text = "999"
align = 2

[node name="new_indicator" type="Sprite2D" parent="z_indexer"]
visible = false
position = Vector2( 29, -10 )
texture = ExtResource( 11 )

[node name="new_en" type="Sprite2D" parent="z_indexer/new_indicator"]
texture = ExtResource( 12 )

[node name="card_self_tween" type="Tween" parent="."]

[node name="card_self_tween2" type="Tween" parent="."]

[connection signal="button_up" from="." to="." method="_on_0175card_button_up"]
